# stardust

./: CMakeLists.txt
include/stardust/: abilities.hpp  character.hpp  types.hpp
src/: abilities.cpp  character.cpp
